# SimForge

./: .gitignore  README.md  pyproject.toml
src/three_d_agent/: cli.py
src/three_d_agent/artifact/: __init__.py  store.py
src/three_d_agent/feedback/: __init__.py  aggregator.py
src/three_d_agent/generator/: __init__.py  convex_decomp.py  mesh_builder.py  mesh_cache.py  primitive_builder.py  router.py  template_builder.py
src/three_d_agent/generator/mesh/: __init__.py  stub.py
src/three_d_agent/generator/templates/: _common.py  drawer.py  simple_parallel_gripper.py
src/three_d_agent/orchestrator/: __init__.py  agent.py  client.py  repl.py  safety.py  system_prompt.py  tools.py
src/three_d_agent/runner/: __init__.py  mujoco_runner.py  thumbnail.py
src/three_d_agent/runner/scenes/: __init__.py  drop_from_height.py  gravity_settle.py  gripper_grasps_target.py  interpenetration_sweep.py  nudge_robustness.py  pinch_grasp.py  place_on_table.py  pull_drawer.py  shake_test.py  swing_hinge.py
src/three_d_agent/sad/: __init__.py  schema.py  validator.py
