[project]
name = "three-d-agent"
version = "0.1.0"
description = "3D Agent: text/image/video to MuJoCo MJCF asset with feedback loop"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "typer>=0.9",
    "anthropic>=0.40",
    "mujoco>=3.1",
    "numpy>=1.26",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.8",
]
mesh = [
    "coacd>=1.0",  # optional: convex decomposition for concave mesh collision
]

[project.scripts]
3d-agent = "three_d_agent.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
